initial version of superhumangenes module

--- a/superhumanreporter/template.html
+++ b/superhumanreporter/template.html
@@ -351,6 +351,12 @@
 
 <body>
 <div>
+	<h1>Superhuman Genes</h1>
+	<div style="margin-bottom: 20px;"class="board">
+		<p> This is Superhuman genes report. It contains information about </p>
+		<p></p>
+		<p>Blabla
+		</p></div>
     <table class="ui selectable celled teal table table variants">
 		<thead>
 			<tr>
