--- a/superhumanreporter/template.html
+++ b/superhumanreporter/template.html
@@ -386,9 +386,9 @@ img{
 		<img src="https://psv4.userapi.com/c237231/u671275295/docs/d57/23210587f8ee/superhumanlightreportnologo.png?extra=1cqbLMZ-B1CJmSvcIySPWiRsq5F2kK2BPpwjDi7C87V_cQvrwOMTZJH8RxRnLYI19veDI8EmcQbCxbhOrJ3zwfHA7HwAQGxcB268JdWTQ4sLoYLN_rqV1WA-Pw2IW_5_MrkjSUrTdpBCq6TcqLoqZyMvJ4Y">
 	</div>
 	<div class="board">
-		<p> This is Superhuman genes report. It contains information about </p>
+		<p>This is Superhuman genes report. In this report you can find the information about "superhuman" genes that you possess. </p>
 		<p></p>
-		<p>Based on the  <a href="https://arep.med.harvard.edu/gmc/protect.html">spreadsheet</a> by George Church
+		<p>Based on the  <a href="https://arep.med.harvard.edu/gmc/protect.html">spreadsheet</a> by George Church.
 		</p></div>
 	<table class="ui selectable celled teal table">
 		<thead>
